[project]
name = "snackstack-multimodel"
version = "0.1.0"
description = "Multi-Agent Food Delivery Assistant with LangGraph"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Core AI
    "openai>=1.40",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.2",

    # RAG
    "chromadb>=0.5",
    "langchain-chroma>=0.2",

    # Voice I/O
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "numpy>=1.26",

    # Email
    "resend>=2.0",

    # Config
    "python-dotenv>=1.0",
    "pydantic>=2.0",

    # Graph visualization
    "grandalf>=0.8",
]

[project.scripts]
snackstack = "snackstack.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snackstack"]